--- a/about.html
+++ b/about.html
@@ -57,6 +57,7 @@
             <h3>Referensi: </h3>
                 <li>Webiste Resmi Bootstrap : <a href="https://getbootstrap.com/">https://getbootstrap.com/</a></li>
                 <li>StackOverflow : <a href="https://stackoverflow.com/">https://stackoverflow.com/</a></li>
+		<li>FreeCodeCamp.org Javascript Course: <a href="https://www.youtube.com/watch?v=PkZNo7MFNFg"></a></li>
                 <li>Modul Pembelajaran LAB</li>
         </div>
     <script>
