Nambahin sedikit di about.html

--- a/about.html
+++ b/about.html
@@ -57,8 +57,8 @@
       <h3>Referensi:</h3>
       <li>Webiste Resmi Bootstrap : <a href="https://getbootstrap.com/">https://getbootstrap.com/</a></li>
       <li>StackOverflow : <a href="https://stackoverflow.com/">https://stackoverflow.com/</a></li>
-      <li>FreeCodeCamp.org Javascript Course: <a href="https://www.youtube.com/watch?v=PkZNo7MFNFg"></a></li>
-      <li>Modul Pembelajaran LAB</li>
+      <li>FreeCodeCamp.org Javascript Course: <a href="https://www.youtube.com/watch?v=PkZNo7MFNFg">Link YouTube</a></li>
+      <li>Modul Pembelajaran LAB Week 1 - 7</li>
     </div>
     <script>
       var navLinks = document.getElementById("navLinks");
