--- a/clicker.html
+++ b/clicker.html
@@ -8,5 +8,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-9">
+          <!-- 1 big column the width of 3 columns on medium and above screens -->
+          <h1>Nama Game</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-4">
+          <!-- 3 columns on small screens, 1 column on medium and above screens -->
+          <h2>Upgrades (Menambah Nilai Click), (Multiplier Click)</h2>
+        </div>
+        <div class="col-12 col-md-4">
+          <!-- 3 columns on small screens, 1 column on medium and above screens -->
+          <h2>Tombol untuk nambahin value</h2>
+        </div>
+        <div class="col-12 col-md-4">
+          <!-- 3 columns on small screens, 1 column on medium and above screens -->
+          <h2>Passive Upgrades (Nambahin uang tanpa perlu ngeclick)</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-9">
+          <!-- Same as the 1st column -->
+          <h1>Menu buat fitur lainnya</h1>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
