--- a/clicker.html
+++ b/clicker.html
@@ -14,12 +14,25 @@
         <div class="col-12 col-md-9">
           <!-- 1 big column the width of 3 columns on medium and above screens -->
           <h1>Nama Game</h1>
+          <p>Berisi juga jumlah uang player</p>
         </div>
       </div>
       <div class="row">
         <div class="col-12 col-md-4">
-          <!-- 3 columns on small screens, 1 column on medium and above screens -->
-          <h2>Upgrades (Menambah Nilai Click), (Multiplier Click)</h2>
+          <div class="row">
+            <div class="col-6">
+              <!-- First column, takes up half the width on all screens -->
+              <h3>Upgrades</h3>
+              <p>Menambah Nilai Click</p>
+              <p>Multiplier Click</p>
+            </div>
+            <div class="col-6">
+              <!-- Second column, takes up half the width on all screens -->
+              <h3>Stats</h3>
+              <p>Current Click Value: 10</p>
+              <p>Multiplier: 1.5x</p>
+            </div>
+          </div>
         </div>
         <div class="col-12 col-md-4">
           <!-- 3 columns on small screens, 1 column on medium and above screens -->
