--- a/clicker.html
+++ b/clicker.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clicker 7</title>
+    <link rel="stylesheet" href="gamestyle.css" />
+    <script src="clickerscript.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </head>
@@ -13,8 +15,9 @@
       <div class="row">
         <div class="col-12 col-md-9">
           <!-- 1 big column the width of 3 columns on medium and above screens -->
-          <h1>Nama Game</h1>
-          <p>Berisi juga jumlah uang player</p>
+          <h1>Nama Game (Clicker seveN)</h1>
+          <p>Cash</p>
+          <p id="cashDisplay">0</p>
         </div>
       </div>
       <div class="row">
@@ -34,9 +37,11 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
-          <!-- 3 columns on small screens, 1 column on medium and above screens -->
-          <h2>Tombol untuk nambahin value</h2>
+        <div class="col-12 col-md-4 d-flex align-items-center flex-column">
+          <h2 class="mb-4 text-center">Tombol untuk nambahin value</h2>
+          <button type="button" class="btn btn-light" onclick="grayOutImage(this); generateCash(this)">
+            <img src="images\midcol\moneybutton.png" alt="Button For Game" class="img-fluid" width="200" />
+          </button>
         </div>
         <div class="col-12 col-md-4">
           <!-- 3 columns on small screens, 1 column on medium and above screens -->
