--- a/clicker.html
+++ b/clicker.html
@@ -60,18 +60,18 @@
               <h3>Multipliers</h3>
               <div class="row">
                 <div class="col-6">
-                  <button class="btn btn-primary m-1">Upgrade Multiplier</button>
+                  <button type="button" class="btn btn-primary m-1" onclick="multiplier2()">Upgrade Multiplier by 2</button>
                 </div>
                 <div class="col-6">
-                  <button class="btn btn-primary m-1">Upgrade Multiplier</button>
+                  <button type="button" class="btn btn-primary m-1" onclick="multiplier10()">Upgrade Multiplier by 10</button>
                 </div>
               </div>
               <div class="row">
                 <div class="col-6">
-                  <button class="btn btn-primary m-1">Upgrade Multiplier</button>
+                  <button type="button" class="btn btn-primary m-1" onclick="multiplier1000()">Upgrade Multiplier by 1000</button>
                 </div>
                 <div class="col-6">
-                  <button class="btn btn-primary m-1">Upgrade Multiplier</button>
+                  <button type="button" class="btn btn-primary m-1" onclick="multiplier_default()">Default</button>
                 </div>
               </div>
             </div>
