--- a/about.html
+++ b/about.html
@@ -29,25 +29,25 @@
 
     <div class="row">
       <div class="about-col">
-        <img src="images/Anggota_1.jpeg" alt="" />
+        <img src="images/Anggota_1.png" alt="" />
         <div class="layer">
           <h3>Achmad Ayubi Fario (00000053319)</h3>
         </div>
       </div>
       <div class="about-col">
-        <img src="images/Anggota_1.jpeg" alt="" />
+        <img src="images/Anggota_1.png" alt="" />
         <div class="layer">
           <h3>Eduardus Farrel Tirtawinata (00000069931)</h3>
         </div>
       </div>
       <div class="about-col">
-        <img src="images/Anggota_1.jpeg" alt="" />
+        <img src="images/Anggota_1.png" alt="" />
         <div class="layer">
           <h3>Farrel Ramada Alladines (00000069400)</h3>
         </div>
       </div>
       <div class="about-col">
-        <img src="images/Anggota_1.jpeg" alt="" />
+        <img src="images/Anggota_1.png" alt="" />
         <div class="layer">
           <h3>Malik Bazil Rabbani (00000070006)</h3>
         </div>
