--- a/clicker.html
+++ b/clicker.html
@@ -6,11 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clicker 7</title>
     <link rel="stylesheet" href="gamestyle.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="clickerscript.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </head>
   <body>
+    <div class="head-about">
+      <h1 style="font-family: 'Times New Roman', Times, serif; color: white">Play</h1>
+      <nav>
+        <div class="nav-links" id="navLinks">
+          <i class="fa fa-times" onclick="hideMenu()"></i>
+          <ul>
+            <li><a href="clicker.html">PLAY!!!</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+          </ul>
+        </div>
+        <i class="fa fa-bars" onclick="showMenu()"></i>
+      </nav>
+      <h2 style="text-align: center; font-family: 'Times New Roman', Times, serif; color: white">Pengantar Teknologi Internet - Kelompok 7</h2>
+      <h2 style="text-align: center; font-family: 'Times New Roman', Times, serif; color: white">Game Ber-Uang</h2>
+    </div>
     <div class="container">
       <div class="row">
         <div class="row">
@@ -78,7 +94,7 @@
           </div>
         </div>
         <div class="col-12 col-md-4 d-flex align-items-center flex-column">
-          <h2 class="mb-4 text-center">Tombol untuk nambahin value</h2>
+          <h2 class="mb-4 text-center">Tombol Ajaib Nambah Uang</h2>
           <button type="button" class="btn btn-light" onclick="grayOutImage(this); generateCash(this)">
             <img src="images\midcol\moneybutton.png" alt="Button For Game" class="img-fluid" width="200" />
           </button>
@@ -124,6 +140,10 @@
         <div class="col-12 col-md-9 align-items-center text-center">
           <!-- Same as the 1st column -->
           <h1>Menu buat fitur lainnya</h1>
+        </div>
+        <div class= "col-12 col-md-9 align-items-center text-center">
+          <button class="btn btn-primary m-3" onclick="poor()">Poor me!!!</button>
+          <button class="btn btn-primary m-3" onclick="billion()">Pray to GOD for give me money</button>
         </div>
       </div>
     </div>
