Nambah tombol upgrade berfungsi

--- a/clicker.html
+++ b/clicker.html
@@ -56,18 +56,18 @@
               <h3>Click Upgrades</h3>
               <div class="row">
                 <div class="col-6">
-                  <button class="btn btn-primary m-1">Upgrade Click Value</button>
+                  <button id="up1" class="btn btn-primary m-1" onclick="upgradeClickValue('up1', 100, 10)">+10</button>
                 </div>
                 <div class="col-6">
-                  <button class="btn btn-primary m-1">Upgrade Click Value</button>
+                  <button id="up2" class="btn btn-primary m-1" onclick="upgradeClickValue('up2', 1000, 100)">+100</button>
                 </div>
               </div>
               <div class="row">
                 <div class="col-6">
-                  <button class="btn btn-primary m-1">Upgrade Click Value</button>
+                  <button id="up3" class="btn btn-primary m-1" onclick="upgradeClickValue('up3', 10000, 1000)">+1000</button>
                 </div>
                 <div class="col-6">
-                  <button class="btn btn-primary m-1">Upgrade Click Value</button>
+                  <button id="up4" class="btn btn-primary m-1" onclick="upgradeClickValue('up4', 100000, 10000)">+10000</button>
                 </div>
               </div>
             </div>
