--- a/clicker.html
+++ b/clicker.html
@@ -101,36 +101,36 @@
         </div>
         <div class="col-12 col-md-4">
           <!-- 3 columns on small screens, 1 column on medium and above screens -->
-          <h2>Passive Upgrades</h2>
+          <h2>Buka Cabang</h2>
           <div class="row">
             <div class="col-md-2 mx-2">
-              <button class="btn btn-primary m-3">Passive Upgrade</button>
+              <button class="btn btn-primary m-3">Jatinangor</button>
             </div>
             <div class="col-md-2 mx-4">
-              <button class="btn btn-primary m-3">Passive Upgrade</button>
+              <button class="btn btn-primary m-3">Trenggalek</button>
             </div>
           </div>
           <div class="row ">
             <div class="col-md-2 mx-2">
-              <button class="btn btn-primary m-3">Passive Upgrade</button>
+              <button class="btn btn-primary m-3">Tangerang Selatan</button>
             </div>
             <div class="col-md-2 mx-4">
-              <button class="btn btn-primary m-3">Passive Upgrade</button>
+              <button class="btn btn-primary m-3">Manokwari</button>
             </div>
             <div class="row">
               <div class="col-md-2 mx-2">
-                <button class="btn btn-primary m-3">Passive Upgrade</button>
+                <button class="btn btn-primary m-3">Tokyo</button>
               </div>
               <div class="col-md-2 mx-4">
-                <button class="btn btn-primary m-3">Passive Upgrade</button>
+                <button class="btn btn-primary m-3">Los Angeles</button>
               </div>
             </div>
             <div class="row ">
               <div class="col-md-2 mx-2">
-                <button class="btn btn-primary m-3">Passive Upgrade</button>
+                <button class="btn btn-primary m-3">Mars</button>
               </div>
               <div class="col-md-2 mx-4">
-                <button class="btn btn-primary m-3">Passive Upgrade</button>
+                <button class="btn btn-primary m-3">Neptunus</button>
               </div>
           </div>
         </div>
