update autoclik tapi ngebug

--- a/clicker.html
+++ b/clicker.html
@@ -144,6 +144,7 @@
         <div class= "col-12 col-md-9 align-items-center text-center">
           <button class="btn btn-primary m-3" onclick="poor()">Poor me!!!</button>
           <button class="btn btn-primary m-3" onclick="billion()">Pray to GOD for give me money</button>
+          <button class="btn btn-primary m-3" onclick="autoclik()">autoclik</button>
         </div>
       </div>
     </div>
