--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="#about">ABOUT</a></li>
+            <li><a href="clicker.html">PLAY!!!</a></li>
+            <li><a href="about.html">ABOUT</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
