--- a/about.html
+++ b/about.html
@@ -35,13 +35,13 @@
         </div>
       </div>
       <div class="about-col">
-        <img src="images/Anggota_1.png" alt="" />
+        <img src="images/anggota_2.jpg" alt="" />
         <div class="layer">
           <h3>Eduardus Farrel Tirtawinata (00000069931)</h3>
         </div>
       </div>
       <div class="about-col">
-        <img src="images/Anggota_1.png" alt="" />
+        <img src="images/anggota_3.jpg" alt="" />
         <div class="layer">
           <h3>Farrel Ramada Alladines (00000069400)</h3>
         </div>
