--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
     <div class="row">
       <div class="about-col">
-        <img src="images/Anggota_1.png" alt="" />
+        <img src="images/Anggota_1.jpeg" alt="" />
         <div class="layer">
           <h3>Achmad Ayubi Fario (00000053319)</h3>
         </div>
