FINALLY DONE... HAPPY HOLIDAYS GUYS

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         </div>
       </div>
       <div class="about-col">
-        <img src="images/Anggota_1.png" alt="" />
+        <img src="images/vergil.png" alt="Malik Gans" />
         <div class="layer">
           <h3>Malik Bazil Rabbani (00000070006)</h3>
         </div>
