--- a/clicker.html
+++ b/clicker.html
@@ -49,9 +49,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 col-md-4">
+        <div class="col">
           <div class="row">
-            <div class="col-6">
+            <div class="col-6 border border-3 rounded m-2">
               <!-- First column, takes up half the width on all screens -->
               <h3>Click Upgrades</h3>
               <div class="row">
@@ -71,78 +71,83 @@
                 </div>
               </div>
             </div>
-            <div class="col-6">
-              <!-- Second column, takes up half the width on all screens -->
+
+            <div class="col-md-6 border border-3 rounded m-2" id="multipliers">
+              <!-- Second column, takes up half the width on medium and larger screens -->
               <h3>Multipliers</h3>
               <div class="row">
-                <div class="col-6">
-                  <button type="button" class="btn btn-primary m-1" onclick="multiplier2()">Set Multiplier to 2</button>
+                <div class="col-sm-6 mb-3">
+                  <button type="button" class="btn btn-primary w-100" onclick="multiplier2()">Set Multiplier to 2</button>
                 </div>
-                <div class="col-6">
-                  <button type="button" class="btn btn-primary m-1" onclick="multiplier10()">Set Multiplier to 10</button>
+                <div class="col-sm-6 mb-3">
+                  <button type="button" class="btn btn-primary w-100" onclick="multiplier10()">Set Multiplier to 10</button>
                 </div>
               </div>
               <div class="row">
-                <div class="col-6">
-                  <button type="button" class="btn btn-primary m-1" onclick="multiplier1000()">Set Multiplier to 1000</button>
+                <div class="col-sm-6 mb-3">
+                  <button type="button" class="btn btn-primary w-100" onclick="multiplier1000()">Set Multiplier to 1000</button>
                 </div>
-                <div class="col-6">
-                  <button type="button" class="btn btn-primary m-1" onclick="multiplier_default()">Default (1x)</button>
+                <div class="col-sm-6 mb-3">
+                  <button type="button" class="btn btn-primary w-100" onclick="multiplier_default()">Default (1x)</button>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 d-flex align-items-center flex-column">
+
+        <div class="col-12 col-md-4 d-flex align-items-center flex-column border border-3 rounded m-2">
           <h2 class="mb-4 text-center">Tombol Ajaib Nambah Uang</h2>
           <button type="button" class="btn btn-light" onclick="grayOutImage(this); generateCash(this)">
             <img src="images\midcol\moneybutton.png" alt="Button For Game" class="img-fluid" width="200" />
           </button>
         </div>
-        <div class="col-12 col-md-4">
+
+        <div class="col-12 col-md-4 border border-3 rounded m-2">
           <!-- 3 columns on small screens, 1 column on medium and above screens -->
           <h2>Buka Cabang</h2>
           <p>Cari pekerja dari berbagai kota untuk menambahkan passive income!</p>
-          <div class="row">
-            <div class="col-md-2 mx-2">
-              <button id="ac-1" class="btn btn-primary m-3" onclick="auto_click('ac-1')" data-required-cash="10000" gain="1000" disabled>Jatinangor</button>
+          <div class="row justify-content-start">
+            <div class="col">
+              <button id="ac-1" class="btn btn-primary m-1" onclick="auto_click('ac-1')" data-required-cash="10000" gain="1000" disabled>Jatinangor</button>
             </div>
-            <div class="col-md-2 mx-4">
-              <button id="ac-2" class="btn btn-primary m-3" onclick="auto_click('ac-2')" data-required-cash="50000" gain="5000" disabled>Trenggalek</button>
+            <div class="col">
+              <button id="ac-2" class="btn btn-primary" onclick="auto_click('ac-2')" data-required-cash="50000" gain="5000" disabled>Trenggalek</button>
             </div>
           </div>
           <div class="row ">
-            <div  class="col-md-2 mx-2">
-              <button id="ac-3" class="btn btn-primary m-3" onclick="auto_click('ac-3')" data-required-cash="75000" gain="15000" disabled >Tangerang Selatan</button>
+            <div  class="col">
+              <button id="ac-3" class="btn btn-primary m-1" onclick="auto_click('ac-3')" data-required-cash="75000" gain="15000" disabled >Tangerang Selatan</button>
             </div>
-            <div class="col-md-2 mx-4">
-              <button id="ac-4" class="btn btn-primary m-3" onclick="auto_click('ac-4')" data-required-cash="85000" gain="35000" disabled>Manokwari</button>
+            <div class="col">
+              <button id="ac-4" class="btn btn-primary" onclick="auto_click('ac-4')" data-required-cash="85000" gain="35000" disabled>Manokwari</button>
             </div>
             <div class="row">
-              <div class="col-md-2 mx-2">
-                <button id="ac-5" class="btn btn-primary m-3" onclick="auto_click('ac-5')" data-required-cash="100000" gain="50000" disabled>Tokyo</button>
+              <div class="col">
+                <button id="ac-5" class="btn btn-primary m-1" onclick="auto_click('ac-5')" data-required-cash="100000" gain="50000" disabled>Tokyo</button>
               </div>
-              <div class="col-md-2 mx-4">
-                <button id="ac-6" class="btn btn-primary m-3" onclick="auto_click('ac-6')" data-required-cash="500000" gain="115000" disabled>Los Angeles</button>
+              <div class="col">
+                <button id="ac-6" class="btn btn-primary" onclick="auto_click('ac-6')" data-required-cash="500000" gain="115000" disabled>Los Angeles</button>
               </div>
             </div>
             <div class="row ">
-              <div class="col-md-2 mx-2">
-                <button id = "ac-7" class="btn btn-primary m-3" onclick="auto_click('ac-7')" data-required-cash="1000000" gain="200000" disabled>Mars</button>
+              <div class="col">
+                <button id="ac-7" class="btn btn-primary m-1" onclick="auto_click('ac-7')" data-required-cash="1000000" gain="200000" disabled>Mars</button>
               </div>
-              <div class="col-md-2 mx-4">
-                <button id="ac-8" class="btn btn-primary m-3" onclick="auto_click('ac-8')" data-required-cash="2500000" gain="500000" disabled>Neptunus</button>
+              <div class="col">
+                <button id="ac-8" class="btn btn-primary" onclick="auto_click('ac-8')" data-required-cash="2500000" gain="500000" disabled>Neptunus</button>
               </div>
+            </div>
           </div>
         </div>
-      </div>
         
-      <div class="row">
+
+
+      <div class="row border border-3 rounded m-2">
         <div class="col-12 col-md-9 align-items-center text-center">
           <!-- Same as the 1st column -->
           <h1>Menu buat fitur lainnya</h1>
         </div>
-        <div class= "col-12 col-md-9 align-items-center text-center">
+        <div class="col-12 col-md-9 align-items-center text-center">
           <button class="btn btn-primary m-3" onclick="poor()">Poor me!!!</button>
           <button class="btn btn-primary m-3" onclick="billion()">Pray to GOD for give me money</button>
         </div>
